# siyuan-plugin-bullet-journal

./: .env.example  .gitignore  1.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MIGRATION_PLAN.md  README.md  README.zh-CN.md  README_zh_CN.md  ai-chat-flow.md  eslint.config.mjs  kernel-architecture.html  package-lock.json  package.json  plugin.json  pnpm-workspace.yaml  release.js  roadmap.md  test-blocks.ts  test-inline-pomodoro.ts  tsconfig.json  ui.pen  vite.config.ts  vite.kernel.config.ts  vite.mcp.config.ts  vitest.config.ts  研发计划案例.md
.github/workflows/: release.yml
.trae/documents/: 0.8.0-AI任务助理推文.md  add-debug-logging-to-markdown-parser.md  add-footer-actions-to-pomodoro-card.md  add-refresh-notification.md  (+85 more)
asset/: 2026-19-0504-0510-report.html
docs/: ai-skill-system-design.md  block-writer-architecture.html  blockWriter-architecture.html  callchain-ai-save-putfile.md  codex-for-oss-application.md  data-sync-flow.html  data-sync-flow.md  manual-verification-checklist.md  siyuan-theme-variables.md  siyuan-timer-leak-issue.md  前端API.ts  数据库API.md
parser-rust/: Cargo.toml
parser-rust/parser-wasm/: Cargo.toml
parser-rust/parser-wasm/src/: lib.rs
remotion-video/: package-lock.json  package.json  remotion.config.ts
scripts/: check-deprecated-fileutils-imports.mjs  check-direct-updateblock-imports.mjs  split-changelogs.mjs  split-changelogs.ps1
src/: api.ts  constants.ts  index.scss  index.ts  main.ts
test/: index.localDataMutation.test.ts  index.mobileOpenSetting.test.ts  index.taskCompletion.test.ts
test-data/: multi-date-test.md
(+1247 files in other folders)
