[package]
name = "parser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
parser-core = { path = "../parser-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }

# 开发依赖
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
